<resources>
    <string name="app_name">TFTBLE</string>
    <string name="ble_name">Device name:</string>
    <string name="ble_id">ID:</string>
    <string name="date">Date:</string>
    <string name="rssi">RSSI:</string>
    <string name="device_model">Device model:</string>
    <string name="hardware">Hardware:</string>
    <string name="software">Firmware:</string>
    <string name="battery">Battery:</string>
    <string name="temp">Temperature:</string>
    <string name="humidity">Humidity:</string>
    <string name="light">Light:</string>
    <string name="door">Door:</string>
    <string name="relay">Relay:</string>
    <string name="warn">Warn:</string>
    <string name="temp_switch">℉</string>
    <string name="configDesc">Config:</string>
    <string name="config">Config</string>
    <string name="main_bar_text">Bluetooth sensor</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="name">Name:</string>
    <string name="edit">Edit</string>
    <string name="password">Password:</string>
    <string name="password_show">******</string>
    <string name="broadcast_cycle">Broadcast cycle:</string>
    <string name="save_record_interval">Save record interval:</string>
    <string name="temp_high_alarm">Temperature high alarm:</string>
    <string name="temp_low_alarm">Temperature low alarm:</string>
    <string name="humidity_high_alarm">Humidity high alarm:</string>
    <string name="humidity_low_alarm">Humidity low alarm:</string>
    <string name="save_count">History count:</string>
    <string name="save_alarm_count">Alarm count:</string>
    <string name="record_control">Record control:</string>
    <string name="stop_record">Stop record</string>
    <string name="start_record">Start record</string>
    <string name="clear_record">Clear record</string>
    <string name="led">Led:</string>
    <string name="reset_factory_desc">Reset factory:</string>
    <string name="reset_factory">Reset factory</string>
    <string name="warning">Warning</string>
    <string name="connect_fail">Connect fail!</string>
    <string name="connecting">Connecting</string>
    <string name="input_device_password">Enter password</string>
    <string name="info">Information</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="password_is_error">Password is error!</string>
    <string name="error_please_try_again">Error,please try again!</string>
    <string name="password_has_been_updated">Password has been updated!</string>
    <string name="factory_reset_succ">Factory Settings restored successfully, please enter the password to reconnect</string>
    <string name="disconnect_please_connect_manually">Has been disconnected, please reconnect manually!</string>
    <string name="enter_device_name">Enter device name</string>
    <string name="input_error">Input error!</string>
    <string name="old_pwd">Old password:</string>
    <string name="new_pwd">New password:</string>
    <string name="change_pwd_input_error">Value is incorrect!The length has to be 6 digits</string>
    <string name="pwd_not_match">Old password is wrong, please re-enter!</string>
    <string name="edit_pwd_view_title">Edit password</string>
    <string name="high">High:</string>
    <string name="low">Low:</string>
    <string name="temp_alarm">Temperature alarm</string>
    <string name="humidity_alarm">Humidity alarm</string>
    <string name="high_temp_warning">Value is incorrect!Need to turn on the high temperature warning switch.</string>
    <string name="high_temp_warning2">Value is incorrect!Need to set the high temperature warning value.</string>
    <string name="low_temp_warning">Value is incorrect!Need to turn on the low temperature warning switch.</string>
    <string name="low_temp_warning2">Value is incorrect!Need to set the low temperature warning value.</string>
    <string name="temp_range_error_warning">Value is incorrect!It must between -39 and 99.</string>
    <string name="temp_range_error_warning1">Value is incorrect!It must between -38 and 210.</string>
    <string name="high_humidity_warning">Value is incorrect!Need to turn on the high humidity warning switch.</string>
    <string name="high_humidity_warning2">Value is incorrect!Need to set the high humidity warning value.</string>
    <string name="low_humidity_warning">Value is incorrect!Need to turn on the low humidity warning switch.</string>
    <string name="low_humidity_warning2">Value is incorrect!Need to set the low humidity warning value.</string>
    <string name="opt_of_range_warning">Value is incorrect!It is out of range.</string>
    <string name="enter_broadcast_cycle">Enter broadcast cycle</string>
    <string name="broadcast_input_error">Value is incorrect!It must between 5 and 1800</string>
    <string name="enter_save_record_interval">Enter save record interval</string>
    <string name="save_record_interval_input_error">Value is incorrect, value needs to be greater than 10.</string>
    <string name="enter_save_count">Enter save count</string>
    <string name="refresh">Refresh</string>
    <string name="read">Read</string>
    <string name="confirm_relay_warning">Try to switch relay?</string>
    <string name="confirm_reset_factory_warning">Try to reset factory?</string>
    <string name="please_input_search_name">Please input some text</string>
    <string name="upgrade">Upgrade</string>
    <string name="upgrade_confirm">New version found, updated?</string>
    <string name="upgrade_beta_confirm">New beta version found, updated?</string>
    <string name="prepare_upgrade">Preparing upgrade</string>
    <string name="download_file_fail">Download upgrade file fail! Please try again!</string>
    <string name="upgrade_aborted">Upgrade aborted, please try again.</string>
    <string name="upgrade_succ">Update successfully!</string>
    <string name="upgrade_process_start">Process start</string>
    <string name="upgrade_device_connecting">Device connecting</string>
    <string name="upgrade_device_disconnected">Device disconnected</string>
    <string name="processing">Processing</string>
    <string name="reconnecting">Reconnecting</string>
    <string name="loading">Loading</string>
    <string name="str_yesterday">Yesterday</string>
    <string name="str_today">Today</string>
    <string name="str_last_3_day">Last 3 days</string>
    <string name="str_last_7_day">Last 7 days</string>
    <string name="str_last_week">Last week</string>
    <string name="str_this_month">This month</string>
    <string name="str_pre_month">Previous month</string>
    <string name="str_custom">Custom</string>
    <string name="str_alert_start_date_must_less_than_end_date">the start date must less than the end date!</string>
    <string name="wrong_date_warning">Wrong date format!</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="prop_light">Light</string>
    <string name="prop_dark">Dark</string>
    <string name="prop_door_open">Open</string>
    <string name="prop_door_close">Close</string>
    <string name="table_head_battery">Battery</string>
    <string name="table_head_date">Date</string>
    <string name="table_head_temp">Temperature</string>
    <string name="table_head_humidity">Humidity</string>
    <string name="table_head_light">Light</string>
    <string name="table_head_door">Door</string>
    <string name="table_head_warn">Warn</string>
    <string name="not_find_data">Not found data</string>
    <string name="show_detail_chart">See detailed chart information?</string>
    <string name="high_temp_alarm">High temperature alarm</string>
    <string name="low_temp_alarm">Low temperature alarm</string>
    <string name="high_humidity_alarm">High humidity alarm</string>
    <string name="low_humidity_alarm">Low humidity alarm</string>
    <string name="ble_not_support">Does not support Bluetooth</string>
    <string name="report_create_time">Report generation time:</string>
    <string name="report_time">Report time:</string>
    <string name="start_value">Start value:</string>
    <string name="end_value">End value:</string>
    <string name="max_limit">High alarm:</string>
    <string name="min_limit">Low alarm:</string>
    <string name="average">Average:</string>
    <string name="max">Max:</string>
    <string name="min">Min:</string>
    <string name="over_high_count">High extreme count:</string>
    <string name="over_high_time">High extreme time:</string>
    <string name="over_low_count">Low extreme count:</string>
    <string name="over_low_time">Low extreme time:</string>
    <string name="email_setting">Email setting</string>
    <string name="send_pdf">Send pdf</string>
    <string name="send_excel">Send excel</string>
    <string name="send_csv">Send csv</string>
    <string name="begin">Begin:</string>
    <string name="end">End:</string>
    <string name="smtp_server">SMTP server:</string>
    <string name="smtp_port">SMTP port:</string>
    <string name="smtp_email">Email:</string>
    <string name="smtp_senders_name">Senders name</string>
    <string name="smtp_send_fail">Send mail fail,please check your config!</string>
    <string name="recv_email">Receive email(Split by ;):</string>
    <string name="need_config_smtp">You need config email smtp server first!</string>
    <string name="waiting">Waiting...</string>
    <string name="success">Success!</string>
    <string name="device_high_temp_warning">High temperature warning;</string>
    <string name="device_low_temp_warning">Low temperature warning;</string>
    <string name="device_high_humidity_warning">High humidity warning;</string>
    <string name="device_low_humidity_warning">Low humidity warning;</string>
    <string name="device_low_voltage_warning">Low voltage warning;</string>
    <string name="device_light_change_warning">Light change warning;</string>
    <string name="device_door_status_change_warning">Door change warning;</string>
    <string name="disconnect_from_device">Disconnect from the device.</string>
    <string name="network_permission_fail">Access to the network is abnormal, please check the permission of the program to access the network</string>
    <string name="get_upgrade_info_fail">Failed to get upgrade information! Please check the network!</string>
    <string name="report_view_title">Report</string>
    <string name="select_date_view_title">Select datetime</string>
    <string name="transmitted_power">Transmitted Power:</string>
    <string name="clear_cache">Clear cache:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="repeat_pwd">Repeat password:</string>
    <string name="repeat_pwd_not_match">Repeat password is not patch, please re-enter!</string>
    <string name="debug_upgrade">Debug upgrade</string>
    <string name="beta_upgrade">Beta upgrade</string>
    <string name="input_debug_upgrade_url">Input a debug upgrade url</string>
    <string name="tire_pressure">Tire pressure:</string>
    <string name="status">Status:</string>
    <string name="normal">Normal</string>
    <string name="leak">Leak</string>
    <string name="inflation">Inflation</string>
    <string name="startUp">start-up</string>
    <string name="power_on">Power on</string>
    <string name="awaken">awaken</string>
    <string name="savePdfToDownload">Save PDF to Downloads</string>
    <string name="saveExcelToDownload">Save EXCEL to Downloads</string>
    <string name="saveCsvToDownload">Save CSV to Downloads</string>
    <string name="saveToDownloadsSucc">Save to Downloads/TFTBLE success!</string>
    <string name="lightSenseDisable">Light sense disable</string>
    <string name="send_by_hex">Hex data</string>
    <string name="add_line_end">Automatically add [0D 0A]at the end of sending</string>
    <string name="reset">Reset</string>
    <string name="forget_pwd">Forget password?</string>
</resources>