<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:theme="@style/MyAppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/device_list_border"
        android:layout_margin="5dp"
        android:descendantFocusability="blocksDescendants"
        android:padding="5dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_high"
            android:orientation="horizontal"
           >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_color_white"
                android:text="@string/ble_name"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="15dp"
                android:layout_weight="3"
                android:textColor="@color/tx_black"
                android:textSize="@dimen/list_tx" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_color_white"
                android:layout_weight="2"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="1dp"
                android:id="@+id/tx_name"
                android:textColor="@color/tx_black"
                android:textSize="@dimen/list_tx" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_high"

            android:orientation="horizontal" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_color_white"
                android:layout_weight="3"
                android:text="@string/ble_id"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="1dp"
                android:textColor="@color/tx_black"
                android:textSize="@dimen/list_tx" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_color_white"
                android:layout_weight="2"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="1dp"
                android:id="@+id/tx_ble_id"
                android:textColor="@color/tx_black"
                android:textSize="@dimen/list_tx" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_high"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_color_white"
                android:text="@string/date"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="@dimen/list_item_margin_left"
                android:layout_weight="3"
                android:textColor="@color/tx_black"
                android:textSize="@dimen/list_tx" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_color_white"
                android:layout_weight="2"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="1dp"
                android:id="@+id/tx_date"
                android:textColor="@color/tx_black"
                android:textSize="@dimen/list_tx" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_high"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_color_white"
                android:text="@string/rssi"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="@dimen/list_item_margin_left"
                android:layout_weight="3"
                android:textColor="@color/tx_black"
                android:textSize="@dimen/list_tx" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_color_white"
                android:layout_weight="2"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="1dp"
                android:id="@+id/tx_rssi"
                android:textColor="@color/tx_black"
                android:textSize="@dimen/list_tx" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_high"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_color_white"
                android:text="@string/device_model"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="@dimen/list_item_margin_left"
                android:layout_weight="3"
                android:textColor="@color/tx_black"
                android:textSize="@dimen/list_tx" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_color_white"
                android:layout_weight="2"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="1dp"
                android:id="@+id/tx_device_model"
                android:textColor="@color/tx_black"
                android:textSize="@dimen/list_tx" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_high"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_color_white"
                android:text="@string/hardware"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="@dimen/list_item_margin_left"
                android:layout_weight="3"
                android:textColor="@color/tx_black"
                android:textSize="@dimen/list_tx" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_color_white"
                android:layout_weight="2"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="1dp"
                android:id="@+id/tx_hardware"
                android:textColor="@color/tx_black"
                android:textSize="@dimen/list_tx" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_high"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_color_white"
                android:text="@string/software"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="@dimen/list_item_margin_left"
                android:layout_weight="3"
                android:textColor="@color/tx_black"
                android:textSize="@dimen/list_tx" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bg_color_white"
                android:layout_weight="2"
                android:layout_marginBottom="1dp"
                android:layout_marginRight="1dp"
                android:id="@+id/tx_software"
                android:textColor="@color/tx_black"
                android:textSize="@dimen/list_tx" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_high"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/list_item_margin_left"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="3"
                android:background="@color/bg_color_white"
                android:text="@string/battery"
                android:textColor="@color/tx_black"
                android:textSize="@dimen/list_tx" />

            <TextView
                android:id="@+id/tx_battery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="2"
                android:background="@color/bg_color_white"
                android:textColor="@color/tx_black"
                android:textSize="@dimen/list_tx" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_high"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/list_item_margin_left"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="3"
                android:background="@color/bg_color_white"
                android:text="@string/input_acc"
                android:textColor="@color/tx_black"
                android:textSize="@dimen/list_tx" />

            <TextView
                android:id="@+id/tx_input"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="2"
                android:background="@color/bg_color_white"
                android:textColor="@color/tx_black"
                android:textSize="@dimen/list_tx" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_high"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/list_item_margin_left"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="3"
                android:background="@color/bg_color_white"
                android:text="@string/relay_input"
                android:textColor="@color/tx_black"
                android:textSize="@dimen/list_tx" />

            <TextView
                android:id="@+id/tx_relay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="2"
                android:background="@color/bg_color_white"
                android:textColor="@color/tx_black"
                android:textSize="@dimen/list_tx" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_high"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/list_item_margin_left"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="3"
                android:background="@color/bg_color_white"
                android:text="@string/negative_trigger_one"
                android:textColor="@color/tx_black"
                android:textSize="@dimen/list_tx" />

            <TextView
                android:id="@+id/tx_negative_trigger_one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="2"
                android:background="@color/bg_color_white"
                android:textColor="@color/tx_black"
                android:textSize="@dimen/list_tx" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_high"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/list_item_margin_left"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="3"
                android:background="@color/bg_color_white"
                android:text="@string/negative_trigger_two"
                android:textColor="@color/tx_black"
                android:textSize="@dimen/list_tx" />

            <TextView
                android:id="@+id/tx_negative_trigger_two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="2"
                android:background="@color/bg_color_white"
                android:textColor="@color/tx_black"
                android:textSize="@dimen/list_tx" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/list_item_high"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/list_item_margin_left"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="3"
                android:background="@color/bg_color_white"
                android:text="@string/relay_output"
                android:textColor="@color/tx_black"
                android:textSize="@dimen/list_tx" />

            <TextView
                android:id="@+id/tx_relay_output"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="2"
                android:background="@color/bg_color_white"
                android:textColor="@color/tx_black"
                android:textSize="@dimen/list_tx" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_color_white"
                android:text="@string/configDesc"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_marginLeft="@dimen/list_item_margin_left"
                android:layout_weight="3"
                android:textColor="@color/tx_black"
                android:textSize="14dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:descendantFocusability="blocksDescendants"
                android:orientation="horizontal">
                <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                    android:layout_width="200px"
                    android:layout_height="match_parent"
                    android:id="@+id/btn_config"
                    android:textAllCaps="false"
                    android:text="@string/config"
                    android:focusable="false"
                    android:layout_margin="5dp"
                    android:textSize="10dp"></com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_reset_pwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/list_item_margin_left"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"
                android:layout_weight="3"
                android:background="@color/bg_color_white"
                android:text="@string/forget_pwd"
                android:textColor="@color/tx_black"
                android:textSize="14dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:descendantFocusability="blocksDescendants"
                android:orientation="horizontal">

                <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
                    android:id="@+id/btn_reset_pwd"
                    android:layout_width="200px"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:focusable="false"
                    android:text="@string/reset"
                    android:textAllCaps="false"
                    android:textSize="10dp"></com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>